--- a/kelola_album_dan_song/templates/view_album.html
+++ b/kelola_album_dan_song/templates/view_album.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-</head>
+{% block title %}View Album{% endblock %}
+{% block css %}
 <style>
     .tableFixHead {
         overflow: auto;
@@ -37,63 +28,18 @@
         background: #eee;
     }
 </style>
+{% endblock %}
 
-<body>
-    <!-- navbar starts -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Marmut - 9</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!-- add/delete as needed -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Chart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"> Kelola Playlist</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Langganan Paket</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Kelola Album & Songs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Cek Royalti</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Lihat Chart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Play Podcast</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Kelola Podcast</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <!-- navbar ends -->
-    <div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
+{% block content %}
+<div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
         <div class="col-md-12 p-lg-2 mx-auto my-5">
             <h2 class="text-center">Daftar Lagu pada</h2>
-            <h1 class="display-4 fw-bold">Universal encompassing challenge</h1>
+            {% for t in title %}
+            {% for raw in t %}
+            <h1 class="display-4 fw-bold">{{ raw }}</h1>
+            {% endfor %}
+            {% endfor %}
+            <a href="{% url 'kelola_album_song' %}" class="btn btn-secondary">Back</a>
         </div>
     </div>
     <div class="container">
@@ -110,92 +56,27 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Citizen population consider thus purpose</td>
-                            <td>35</td>
-                            <td>48721122</td>
-                            <td>34808853</td>
+                        {% for judul, durasi, total_play, total_download, id_song, id_album in songs %}
+                        <tr class="text-center">
+                            <td>{{ judul }}</td>
+                            <td>{{ durasi }}</td>
+                            <td>{{ total_play }}</td>
+                            <td>{{ total_download }}</td>
                             <td>
-                                <div class="text-center ">
+                                <div class="text-center">
                                     <div class="p-1">
                                         <a href="#" class="link-primary">Lihat Detail</a>
                                     </div>
                                     <div class="p-1">
-                                        <a href="#" class="link-danger">Hapus</a>
+                                        <a href="{% url 'delete_song' id_album id_song %}" class="link-danger">Hapus</a>
                                     </div>
                                 </div>
                             </td>
                         </tr>
-                        <tr>
-                            <td>State with soldier interest address"</td>
-                            <td>163</td>
-                            <td>54648866</td>
-                            <td>43737189</td>
-                            <td>
-                                <div class="text-center ">
-                                    <div class="p-1">
-                                        <a href="#" class="link-primary">Lihat Detail</a>
-                                    </div>
-                                    <div class="p-1">
-                                        <a href="#" class="link-danger">Hapus</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Space where</td>
-                            <td>161</td>
-                            <td>79949770</td>
-                            <td>43565037</td>
-                            <td>
-                                <div class="text-center ">
-                                    <div class="p-1">
-                                        <a href="#" class="link-primary">Lihat Detail</a>
-                                    </div>
-                                    <div class="p-1">
-                                        <a href="#" class="link-danger">Hapus</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Subject around</td>
-                            <td>155</td>
-                            <td>35316439</td>
-                            <td>14397765</td>
-                            <td>
-                                <div class="text-center ">
-                                    <div class="p-1">
-                                        <a href="#" class="link-primary">Lihat Detail</a>
-                                    </div>
-                                    <div class="p-1">
-                                        <a href="#" class="link-danger">Hapus</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>...</td>
-                            <td>...</td>
-                            <td>...</td>
-                            <td>...</td>
-                            <td>
-                                <div class="text-center ">
-                                    <div class="p-1">
-                                        <a href="#" class="link-primary">Lihat Detail</a>
-                                    </div>
-                                    <div class="p-1">
-                                        <a href="#" class="link-danger">Hapus</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
-
-</body>
-
-</html>
+    {% endblock %}
