fix pesan error pass salah

--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -20,6 +20,13 @@
         </form>
     </div>
 </div>
+
+{% if error_message %}
+<script>
+    alert("{{ error_message|escapejs }}");
+</script>
+{% endif %}
+
 {% endblock %}
 
 {% block css %}
