--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -107,6 +107,7 @@
     padding: 50px;
     width: 100%;
     margin-bottom: -240px;
+    margin-top: 50px;
   }
   .dashboard-header h1 {
     margin: 0;
