--- a/cek_royalti/templates/cek_royalti.html
+++ b/cek_royalti/templates/cek_royalti.html
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
+<div class="position-relative overflow-hidden mt-5 p-1 p-md-3 m-md-3 text-center bg-body-tertiary" style="background-color: #42BCFF !important; color: white;">
     <div class="col-md-12 p-lg-2 mx-auto my-5">
         <h1 class="display-4 fw-bold">List Royalti</h1>
     </div>
