--- a/kelola_album_dan_song/templates/kelola_song_album_artist.html
+++ b/kelola_album_dan_song/templates/kelola_song_album_artist.html
@@ -3,6 +3,15 @@
 {% block title %}Kelola Album Song{% endblock %}
 {% block css %}
 <style>
+    .add-album {
+        background-color: #42BCFF;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        color: white;
+        cursor: pointer;
+    }
+
     .tableFixHead {
         overflow: auto;
         height: 500px;
@@ -31,7 +40,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
+<div class="position-relative overflow-hidden mt-5 p-1 p-md-3 m-md-3 text-center bg-body-tertiary" style="background-color: #42BCFF !important; color: white;">
     <div class="col-md-12 p-lg-2 mx-auto my-5">
         <h1 class="display-4 fw-bold">Kelola Album & Song</h1>
     </div>
@@ -41,7 +50,7 @@
     <div class="py-2">
         <form action="{% url 'add_album' %}" method="POST">
             {% csrf_token %}
-            <button type="submit" class="btn btn-primary">Add Album</button>
+            <button type="submit" class="add-album btn-primary">Tambah Album</button>
         </form>
     </div>
     <div class="py-4">
@@ -63,9 +72,9 @@
                     {% for judul, label, jumlah_lagu, total_durasi, id in albums %}
                     <tr>
                         <td>{{ judul }}</td>
-                        <td>{{ label }}</td>
-                        <td>{{ jumlah_lagu }}</td>
-                        <td>{{ total_durasi }} menit</td>
+                        <td><div class="text-center">{{ label }}</div></td>
+                        <td><div class="text-center">{{ jumlah_lagu }}</div></td>
+                        <td><div class="text-center">{{ total_durasi }} menit</div></td>
                         <td>
                             <div class="text-center">
                                 <div class="p-1">
