--- a/kelola_album_dan_song/templates/kelola_song_album_label.html
+++ b/kelola_album_dan_song/templates/kelola_song_album_label.html
@@ -31,7 +31,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
+<div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary" style="background-color: #42BCFF !important; color: white;">
     <div class="col-md-12 p-lg-2 mx-auto my-5">
         <h1 class="display-4 fw-bold">Kelola Album</h1>
     </div>
@@ -56,8 +56,8 @@
                     {% for judul, jumlah_lagu, total_durasi, id in albums %}
                     <tr>
                         <td>{{ judul }}</td>
-                        <td>{{ jumlah_lagu }}</td>
-                        <td>{{ total_durasi }} menit</td>
+                        <td><div class="text-center">{{ jumlah_lagu }}</div></td>
+                        <td><div class="text-center">{{ total_durasi }} menit</div></td>
                         <td>
                             <div class="text-center">
                                 <div class="p-1">
