--- a/downloaded_song/templates/delete_confirmation.html
+++ b/downloaded_song/templates/delete_confirmation.html
@@ -44,6 +44,10 @@
         margin-bottom: 20px;
     }
 
+    p {
+        text-align: center;
+    }
+
     a {
         color: #42BCFF;
         text-decoration: none;
