--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="{% url 'search_bar' %}">Search Bar</a>
                     </li>
                     <li class="nav-item">
-                        {% comment %} <a class="nav-link" href="{% url 'kelola_playlist' %}">Kelola Playlist</a> {% endcomment %}
+                        <a class="nav-link" href="{% url 'user_playlist:user_playlist' %}">Kelola Playlist</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'show_paket' %}">Langganan Paket</a>
